# fndesk

./: Cargo.toml  LICENSE  README.md
src/: app.rs  cli.rs  colors.rs  crossterm.rs  dir.rs  entries.rs  entry.rs  main.rs  path.rs  status_bar.rs  tui.rs  ui.rs  ui_styles.rs  utils.rs
