[package]
name = "fndesk"
version = "0.1.0"
edition = "2021"
authors = ["QT"]
readme = "README.md"

[dependencies]
crossterm = { version = "0.28.1", optional = true }
env_logger = "0.11.6"
log = "0.4.25"
ratatui = "0.29.0"
trash = "5.2.1"

[dev-dependencies]
tempfile = "3.16.0"

[features]
default = ["crossterm", "underline-color"]

crossterm = ["dep:crossterm"]

## enables the [`border!`] marcro
macros = []

## enables the backend code that sets the underline color.
## Underline color is only supported by the [`CrosstermBackend`](backend::CrosstermBackend) backend,
## and is not supported on Windows 7.
underline-color = ["dep:crossterm"]
